--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
                                           {{ pwd[0] }}
                                        </p>
                                        <p class="text-sm text-gray-500 truncate">
-                                          <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="17727a767e7b57607e7973646372653974787a">[email&#160;protected]</a>
+                                          <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="17727a767e7b57607e7973646372653974787a">{{ pwd[3] }}</a>
                                        </p>
                                     </div>
                                     <div class="inline-flex items-center text-base font-semibold text-gray-900">
