--- a/templates/index.html
+++ b/templates/index.html
@@ -65,10 +65,8 @@
                    </div>
                 </div>
                 <a href="#" class="hidden sm:inline-flex ml-5 text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mr-3">
-                   <svg class="svg-inline--fa fa-gem -ml-1 mr-2 h-4 w-4" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                      <path fill="currentColor" d="M378.7 32H133.3L256 182.7L378.7 32zM512 192l-107.4-141.3L289.6 192H512zM107.4 50.67L0 192h222.4L107.4 50.67zM244.3 474.9C247.3 478.2 251.6 480 256 480s8.653-1.828 11.67-5.062L510.6 224H1.365L244.3 474.9z"></path>
-                   </svg>
-                   Upgrade to Pro
+                  <i class="fa-solid fa-right-from-bracket pr-2" style="color: #ffffff;"></i>
+                   Disconnect
                 </a>
              </div>
           </div>
@@ -144,11 +142,11 @@
           </div>
        </aside>
        <div class="bg-gray-900 opacity-50 hidden fixed inset-0 z-10" id="sidebarBackdrop"></div>
-       <div id="main-content" class="h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64">
+       <div id="main-content" class="h-auto w-full bg-gray-200 relative overflow-y-auto  lg:ml-64">
           <main>
              <div class="pt-6 px-4">
                 <div class="grid grid-cols-1 2xl:grid-cols-2 xl:gap-4 my-4">
-                   <div class="bg-white shadow rounded-lg mb-4 p-4 sm:p-6 h-full">
+                   <div class="bg-white shadow rounded-lg mb-4 p-4 sm:p-6 lg:h-[814px]  overflow-hidden">
                       <div class="flex items-center justify-between mb-4">
                          <h3 class="text-xl font-bold leading-none text-gray-900">Passwords list</h3>
                       </div>
@@ -170,7 +168,7 @@
                                        </p>
                                     </div>
                                     <div class="inline-flex items-center text-base font-semibold text-gray-900">
-                                       $320
+                                       
                                     </div>
                                  </div>
                               </li>
@@ -178,7 +176,7 @@
                          </ul>
                       </div>
                    </div>
-                   <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+                   <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 lg:h-[814px] overflow-hidden">
                       <h3 class="text-xl leading-none font-bold text-gray-900 mb-10">Acquisition Overview</h3>
                       <div class="block w-full overflow-x-auto">
                          <table class="items-center w-full bg-transparent border-collapse">
