--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
                               <li class="py-3 sm:py-4">
                                  <div class="flex items-center space-x-4">
                                     <div class="w-10 h-10 bg-sky-300 rounded-full  text-center flex flex-col justify-center">
-                                       <p class="text-[20px] font-semibold uppercase">{{ pwd[0][0] }}</p>
+                                       <p class="text-[20px] font-semibold">{{ pwd[0][0] }}</p>
                                    </div>
                                     <div class="flex-1 min-w-0">
                                        <p class="text-sm font-medium text-gray-900 truncate">
