--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                       <a class="github-button" href="#" data-color-scheme="no-preference: dark; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star themesberg/windster-tailwind-css-dashboard on GitHub">Star</a>
                    </div>
                 </div>
-                <a href="login.html" class="hidden sm:inline-flex ml-5 text-white bg-[#434C5E] hover:bg-[#2E3440] focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mr-3">
+                <a href="/login" class="hidden sm:inline-flex ml-5 text-white bg-[#434C5E] hover:bg-[#2E3440] focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mr-3">
                   <i class="fa-solid fa-right-from-bracket pr-2" style="color: #ffffff;"></i>
                    Disconnect 
                 </a>
@@ -147,9 +147,9 @@
              <div class="pt-6 px-4">
                 <div class="grid grid-cols-1 2xl:grid-cols-2 xl:gap-4 my-4">
                    <div class="bg-white shadow rounded-lg mb-4 p-4 sm:p-6 lg:h-[814px]  overflow-hidden">
-                      <div class="flex items-center justify-between ">
+                      <div class="flex items-center justify-between">
                          <h3 class="text-xl font-bold leading-none text-gray-900">Passwords list</h3>
-                         <button id="add_password" type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"><i class="fa-solid fa-plus pr-2" style="color: #ffffff;"></i> Add password</button>
+                         <button id="add_password" type="button" class="text-white drop-shadow-md bg-[#5E81AC] hover:bg-[#81A1C1] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-plus pr-2" style="color: #ffffff;"></i> Add password</button>
                       </div>
                       <div class="flow-root">
                          <ul role="list" class="divide-y divide-gray-200">
@@ -157,8 +157,8 @@
                            {% for pwd in pwd_list %}
                               <li class="py-3 sm:py-4">
                                  <div class="flex items-center space-x-4">
-                                    <div class="w-10 h-10 bg-sky-300 rounded-full  text-center flex flex-col justify-center">
-                                       <p class="text-[20px] font-semibold">{{ pwd[0][0] }}</p>
+                                    <div class="w-10 h-10 bg-[#88C0D0] rounded-full  text-center flex flex-col justify-center">
+                                       <p class="text-[20px] font-semibold uppercase">{{ pwd[0][0] }}</p>
                                    </div>
                                     <div class="flex-1 min-w-0">
                                        <p class="text-sm font-medium text-gray-900 truncate">
@@ -171,6 +171,14 @@
                                     <div class="inline-flex items-center text-base font-semibold text-gray-900">
                                        
                                     </div>
+                                    <div class="space-x-1">
+                                       <button href="#" id="add_password" type="button" class="text-black  bg-[#D08770] hover:bg-[#d086709a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-pencil" style="color: #000000;"></i></button>
+                                       <button id="add_password" type="button" class="text-black  bg-[#A3BE8C] hover:bg-[#a3be8c8a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-user" style="color: #000000;"></i></button>
+                                       <button id="add_password" type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-key" style="color: #000000;"></i></button>
+                                       <button id="add_password" type="button" class="text-black  bg-[#BF616A] hover:bg-[#bf616a94] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-trash-can" style="color: #000000;"></i></button>
+
+                                       
+                                    </div>
                                  </div>
                               </li>
                            {% endfor %}
@@ -178,7 +186,7 @@
                       </div>
                    </div>
                    <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 lg:h-[814px] overflow-hidden">
-                      <h3 class="text-xl leading-none font-bold text-gray-900 mb-10">Acquisition Overview</h3>
+                      <h3 class="text-xl leading-none font-bold text-gray-900 mb-10">Edit Password</h3>
                       <div class="block w-full overflow-x-auto">
                          <table class="items-center w-full bg-transparent border-collapse">
                             <thead>
