--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,7 @@
                       <div class="flex items-center justify-between mb-4">
                          <h3 class="text-xl font-bold leading-none text-gray-900">Latest Customers</h3>
                          <a href="#" class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
-                         View all
+                         View all test
                          </a>
                       </div>
                       <div class="flow-root">
