--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -1,6 +1,6 @@
-<div class="z-40 fixed left-0 top-0 flex h-full w-full items-center justify-center bg-black bg-opacity-50 py-10">
+<div id="add_password_modal" class="z-40 fixed left-0 top-0 flex h-full w-full items-center justify-center bg-black bg-opacity-50 py-10 hidden" aria-hidden="true">
     <div class="max-h-full w-full max-w-xl overflow-y-auto sm:rounded-2xl bg-white px-6 py-5">
-       <form action="" method="POST">
+       <form action="{{url_for("add_password")}}" method="GET">
           <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Name" value=""/>
           <input type="text" name="login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Login" value=""/>
           <input type="password" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password" value=""/>
