--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
     
     <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+
 </head>
 <body>
 <!-- component -->
@@ -126,7 +128,7 @@
                    <div class="bg-white shadow rounded-lg mb-4 p-4 sm:p-6 lg:h-[814px]  overflow-hidden">
                       <div class="flex items-center justify-between pb-5">
                          <h3 class="text-xl font-bold leading-none text-gray-900">Passwords list</h3>
-                         <button id="add_password" type="button" class="text-white drop-shadow-md bg-[#3B4252] hover:bg-[#3b425296] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-plus pr-2" style="color: #ffffff;"></i> Add password</button>
+                         <button id="add_password" type="button" class="text-white drop-shadow-md bg-[#3B4252] hover:bg-[#3b425296] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5" onclick="show_add_password()"><i class="fa-solid fa-plus pr-2" style="color: #ffffff;"></i> Add password</button>
                       </div>
                       <div class="flow-root">
                          <ul role="list" class="divide-y divide-gray-200">
@@ -214,6 +216,10 @@
             </main>
        </div>
     </div>
+    {% include "add_password.html" %}
+    <script src = "{{ url_for('static', filename = 'js/add_password.js') }}">
+    </script>
+    
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="https://demo.themesberg.com/windster/app.bundle.js"></script>
  </div>
