--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -26,12 +26,12 @@
 <body>
 <div class="max-w-[280px] mx-auto">
   <div class="flex flex-col items-center mt-[20vh]">
-      <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Sign In</h2>
-      <form action="{{url_for("login")}}" method="POST">
-          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="User" value=""/>
-          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="User" value=""/>
+      <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Add a password</h2>
+      <form action="{{url_for("add_password")}}" method="POST">
+          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value=""/>
+          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Login" value=""/>
           <input type="password" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password" value=""/>
-          <input type="url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="User" value=""/>
+          <input type="url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value=""/>
           <input type="submit" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]">
       </form>
       {% with messages = get_flashed_messages()  %}
@@ -43,8 +43,8 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <p class="text-center mt-3 text-[14px]">If you don't have an acount
-          <a href="/register" class="text-gray-600">Click here</a>
+      <p class="text-center mt-3 text-[14px]">If you want to go baxk
+          <a href="/" class="text-gray-600">Click here</a>
       </p>
   </div>
 </div>
