--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -30,7 +30,11 @@
       <form action="{{url_for("add_password")}}" method="POST">
           <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value=""/>
           <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Login" value=""/>
-          <input type="password" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password" value=""/>
+          <input id="password" type="password" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password" value=""/>
+          <div class="w-full h-[40px] mb-2 rounded-lg font-medium flex-row justify-around">
+            <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full">
+            <button id="generate_password" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg px-5 mb-2 transition-colors w-auto h-full text-[19px]" onclick="generate_password()">Generate</button>
+          </div>
           <input type="url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value=""/>
           <input type="submit" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]">
       </form>
@@ -48,5 +52,6 @@
       </p>
   </div>
 </div>
+<script src = "{{ url_for('static', filename = 'js/add_password.js') }}" ></script>
 </body>
 </html>
