--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -23,9 +23,9 @@
 
 </head>
 <!-- component -->
-<body>
+<body class="h-screen flex flex-col justify-center items-center">
 <div class="max-w-[280px] mx-auto">
-  <div class="flex flex-col items-center mt-[20vh]">
+  <div class="flex flex-col items-center ">
       <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Add a password</h2>
       <form action="{{url_for("add_password")}}" method="POST">
           <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value=""/>
@@ -35,6 +35,26 @@
             <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full flex flex items-center justify-center text-center">
             <button type="button" id="generate" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg px-5 mb-2 transition-colors w-auto h-full text-[19px]" onclick="generate_password()">Generate</button>
           </div>
+          <!--<input id="steps-range" type="range" min="0" max="5" value="2.5" step="0.5" class="w-full h-2 mb-5 bg-gray-100 rounded-lg appearance-none cursor-pointer dark:bg-gray-100">-->
+          <div class="w-full mb-2 rounded-lg font-medium grid gap-1 grid-cols-2" >
+            <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
+              <input checked id="add_upercases" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <label for="add_upercases" class="" >ABC</label>
+            </div>
+            <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
+              <input checked id="add_lowercases" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <label for="add_lowercase" class="" >abc</label>
+            </div>
+            <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
+              <input checked id="add_numbers" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <label for="add_numbers" class="" >123</label>
+            </div>
+            <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
+              <input checked id="add_specials" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <label for="add_specials" class="" >#$~</label>
+            </div>
+          </div>
+          
           <input type="url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value=""/>
           <input type="submit" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]">
       </form>
