--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -28,9 +28,9 @@
   <div class="flex flex-col items-center ">
       <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Add a password</h2>
       <form action="{{url_for("add_password")}}" method="POST">
-          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value=""/>
-          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Login" value=""/>
-          <input id="password" type="password" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password" value=""/>
+          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value="" required>
+          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Username" value="">
+          <input id="password" type="password" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password" value="" required>
           <div class="w-full h-[40px] mb-2 rounded-lg font-medium flex flex-row justify-between">
             <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full flex flex items-center justify-center text-center">
             <button type="button" id="generate" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg px-5 mb-2 transition-colors w-auto h-full text-[19px]" onclick="generate_password()">Generate</button>
@@ -38,19 +38,19 @@
           <!--<input id="steps-range" type="range" min="0" max="5" value="2.5" step="0.5" class="w-full h-2 mb-5 bg-gray-100 rounded-lg appearance-none cursor-pointer dark:bg-gray-100">-->
           <div class="w-full mb-2 rounded-lg font-medium grid gap-1 grid-cols-2" >
             <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
-              <input checked id="add_upercases" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <input checked id="add_upercases" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900 mr-1">
               <label for="add_upercases" class="" >ABC</label>
             </div>
             <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
-              <input checked id="add_lowercases" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <input checked id="add_lowercases" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900 mr-1">
               <label for="add_lowercase" class="" >abc</label>
             </div>
             <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
-              <input checked id="add_numbers" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <input checked id="add_numbers" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900 mr-1">
               <label for="add_numbers" class="" >123</label>
             </div>
             <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
-              <input checked id="add_specials" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900">
+              <input checked id="add_specials" type="checkbox" value="" class="ml-2 text-sm font-medium text-gray-900 mr-1">
               <label for="add_specials" class="" >#$~</label>
             </div>
           </div>
