--- a/templates/index.html
+++ b/templates/index.html
@@ -117,6 +117,7 @@
                         <i class="fa-solid fa-star text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"></i>
                         <span class="ml-3">Favorite passwords</span>
                       </a>
+                      
                    </div>
                 </div>
              </div>
@@ -138,6 +139,9 @@
                            {% for pwd in pwd_list %}
                               <li class="py-3 sm:py-4">
                                  <div class="flex items-center space-x-4">
+                                    <div class="favorite">
+                                       <i class="{{ fav }}"></i>
+                                    </div>
                                     <div class="w-10 h-10 bg-[#88C0D0] rounded-full  text-center flex flex-col justify-center">
                                        <p class="text-[20px] font-semibold uppercase">{{ pwd[0][0] }}</p>
                                    </div>
@@ -187,7 +191,7 @@
                         <form action="">
                         <div class="mb-6">
                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Password Name</label>
-                           <input type="email" id="email" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium"  required>
+                           <input type="email" value="hello" id="email" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium" required>
                         </div>
                         <div class="mb-6">
                            <label for="login" class="block mb-2 text-sm font-medium text-gray-900 ">Login</label>
