fav display (half working)

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
                               <li class="py-3 sm:py-4">
                                  <div class="flex items-center space-x-4">
                                     <div class="favorite">
-                                       <i class="{{ fav }}"></i>
+                                       <i class="{{  }}"></i>
                                     </div>
                                     <div class="w-10 h-10 bg-[#88C0D0] rounded-full  text-center flex flex-col justify-center">
                                        <p class="text-[20px] font-semibold uppercase">{{ pwd[0][0] }}</p>
