--- a/templates/passwords_gen.html
+++ b/templates/passwords_gen.html
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
-    <title>Add Password</title>
+    <title>Passwords Generator</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -27,17 +27,8 @@
 <body class="h-screen flex flex-col justify-center items-center">
 <div class="max-w-[280px] mx-auto">
   <div class="flex flex-col items-center ">
-      <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Add a password</h2>
-      <form action="{{url_for("add_password")}}" method="POST">
-          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value="" required>
-          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Username" value="">
-          <div class="relative w-full">
-            <div class="absolute inset-y-0 left-2 top-[-5px] flex items-center px-2">
-              <input class="hidden js-password-toggle" id="toggle" type="checkbox" />
-              <label class="cursor-pointer js-password-label" for="toggle"><i class="fa-solid fa-eye"></i></label>
-            </div>
-            <input class="w-full pl-[42px] px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium js-password" id="password" type="password" autocomplete="off"/>
-          </div>
+      <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Generate a password</h2>
+          <input id="password" type="text" name="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Generated Password" readonly>
           <div class="w-full h-[40px] mb-2 rounded-lg font-medium flex flex-row justify-between">
             <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full flex flex items-center justify-center text-center">
             <button type="button" id="generate" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg px-5 mb-2 transition-colors w-auto h-full text-[19px]" onclick="generate_password()">Generate</button>
@@ -61,15 +52,9 @@
               <label for="add_specials" class="" >#$~</label>
             </div>
           </div>
-          <input type="url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value=""/>
-          <select name="pass_category"class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium ">
-            <option value="" selected>Choose a category</option>
-            {% for category in category_list %}
-            <option value={{ category[0] }} >{{ category[0] }}</option>
-            {% endfor %}
-          </select>
-          <input type="submit" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]">
-      </form>
+          
+            <button onclick="copyPassword()" type="button" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]"><i class="fa-solid fa-copy pr-2"></i>Copy password</button>
+      
       {% with messages = get_flashed_messages()  %}
       {% if messages %}
       {% for message in messages %}
@@ -85,23 +70,5 @@
   </div>
 </div>
 <script src = "{{ url_for('static', filename = 'js/add_password.js') }}" ></script>
-<script>
-  const passwordToggle = document.querySelector('.js-password-toggle')
-
-  passwordToggle.addEventListener('change', function() {
-    const password = document.querySelector('.js-password'),
-      passwordLabel = document.querySelector('.js-password-label')
-
-    if (password.type === 'password') {
-      password.type = 'text'
-      passwordLabel.innerHTML = '<i class="fa-solid fa-eye-slash"></i>'
-    } else {
-      password.type = 'password'
-      passwordLabel.innerHTML = '<i class="fa-solid fa-eye"></i>'
-    }
-
-    password.focus()
-  })
-</script>
 </body>
 </html>
