--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,7 @@
    <li class="py-3 sm:py-4">
       <div class="flex items-center space-x-4">
          <div class="favorite">
-            {% if pwd[-1] == "True" %}
+            {% if pwd[-1] == "1" %}
                <i class="fa-solid fa-star"></i>
             {% else %}
                <i class="fa-regular fa-star"></i>
