--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -27,19 +27,20 @@
 <body class="h-screen flex flex-col justify-center items-center">
 <div class="max-w-[280px] mx-auto">
   <div class="flex flex-col items-center ">
+      
       <h2 class="mb-5 text-gray-900 font-mono font-bold text-xl">Add a password</h2>
       <form action="{{url_for("add_password")}}" method="POST">
-          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value="" required>
-          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Username" value="">
+          <input type="text" name="pass_name" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Password name" value="" >
+          <input type="text" name="pass_login" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Username" value="" >
           <div class="relative w-full">
             <div class="absolute inset-y-0 left-2 top-[-5px] flex items-center px-2">
-              <input class="hidden js-password-toggle" id="toggle" type="checkbox" />
+              <input class="hidden js-password-toggle" id="toggle" type="checkbox">
               <label class="cursor-pointer js-password-label" for="toggle"><i class="fa-solid fa-eye"></i></label>
             </div>
-            <input class="w-full pl-[42px] px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium js-password" id="password" type="password" autocomplete="off"/>
+            <input class="w-full pl-[40px] px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium js-password" id="password" type="password" autocomplete="off" >
           </div>
           <div class="w-full h-[40px] mb-2 rounded-lg font-medium flex flex-row justify-between">
-            <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full flex flex items-center justify-center text-center">
+            <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full flex items-center justify-center text-center">
             <button type="button" id="generate" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg px-5 mb-2 transition-colors w-auto h-full text-[19px]" onclick="generate_password()">Generate</button>
           </div>
           <!--<input id="steps-range" type="range" min="0" max="5" value="2.5" step="0.5" class="w-full h-2 mb-5 bg-gray-100 rounded-lg appearance-none cursor-pointer dark:bg-gray-100">-->
@@ -85,23 +86,6 @@
   </div>
 </div>
 <script src = "{{ url_for('static', filename = 'js/add_password.js') }}" ></script>
-<script>
-  const passwordToggle = document.querySelector('.js-password-toggle')
 
-  passwordToggle.addEventListener('change', function() {
-    const password = document.querySelector('.js-password'),
-      passwordLabel = document.querySelector('.js-password-label')
-
-    if (password.type === 'password') {
-      password.type = 'text'
-      passwordLabel.innerHTML = '<i class="fa-solid fa-eye-slash"></i>'
-    } else {
-      password.type = 'password'
-      passwordLabel.innerHTML = '<i class="fa-solid fa-eye"></i>'
-    }
-
-    password.focus()
-  })
-</script>
 </body>
 </html>
