--- a/templates/search.html
+++ b/templates/search.html
@@ -16,25 +16,24 @@
                {{ pwd[0] }}
             </p>
             <p class="text-sm text-gray-500 ">
-               <a href="/cdn-cgi/l/email-protection" class="__cf_email__ " data-cfemail="17727a767e7b57607e7973646372653974787a">{{ pwd[1] }}</a>
+               {% if pwd[1] %}
+               <a href="{{ pwd[1]  }}" class="__cf_email__ " data-cfemail="17727a767e7b57607e7973646372653974787a"><i class="fa-solid fa-arrow-up-right-from-square pr-2"></i>{{ pwd[1]  }}</a>
+            {% else %}
+            <a href="{{ pwd[1]  }}" class="__cf_email__ " data-cfemail="17727a767e7b57607e7973646372653974787a">{{ pwd[1]  }}</a>
+            {% endif %}
+            
             </p>
          </div>
          
          <div class="hidden sm:block text-truncate space-x-1">
-            <button href="#" type="button" class="text-black  bg-[#D08770] hover:bg-[#d086709a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-pencil" style="color: #000000;"></i></button>
-            <button type="button" class="text-black  bg-[#A3BE8C] hover:bg-[#a3be8c8a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-user" style="color: #000000;"></i></button>
-            <button type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-key" style="color: #000000;"></i></button>
-            <button type="button" class="text-black  bg-[#BF616A] hover:bg-[#bf616a94] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-trash-can" style="color: #000000;"></i></button>
-
-            
+            <button onclick="fill_infos('{{ pwd[0] }}')" type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-info" style="color: #000000;"></i></button>
+            <button id="deleteButton" onclick="delete_password( '{{ pwd[0] }}' )" type="button" class="text-black  bg-[#BF616A] hover:bg-[#bf616a94] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-trash-can" style="color: #000000;"></i></button>
          </div>
 
       </div>
       <div class="sm:hidden sm:block pt-4 space-x-1">
-         <button href="#" type="button" class="text-black  bg-[#D08770] hover:bg-[#d086709a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-pencil" style="color: #000000;"></i></button>
-         <button type="button" class="text-black  bg-[#A3BE8C] hover:bg-[#a3be8c8a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-user" style="color: #000000;"></i></button>
-         <button type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-key" style="color: #000000;"></i></button>
-         <button type="button" class="text-black  bg-[#BF616A] hover:bg-[#bf616a94] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-trash-can" style="color: #000000;"></i></button>
+         <button onclick="fill_infos('{{ pwd[0] }}')" type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-info" style="color: #000000;"></i></button>
+         <button id="deleteButton" type="button" class="text-black  bg-[#BF616A] hover:bg-[#bf616a94] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-trash-can" style="color: #000000;"></i></button>
       </div>
    </li>
 {% endfor %}
