--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -37,7 +37,7 @@
               <input class="hidden js-password-toggle" id="toggle" type="checkbox">
               <label class="cursor-pointer js-password-label" for="toggle"><i class="fa-solid fa-eye"></i></label>
             </div>
-            <input class="w-full pl-[40px] px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium js-password" id="password" type="password" autocomplete="off" >
+            <input name="password" class="w-full pl-[40px] px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium js-password" id="password" type="password" autocomplete="off" >
           </div>
           <div class="w-full h-[40px] mb-2 rounded-lg font-medium flex flex-row justify-between">
             <input type="number" id="length" min="4" max="30" value="12" class="border border-slate-600 rounded-lg font-medium h-full flex items-center justify-center text-center">
