--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 <div class="flex">
                   <a href="#" class="text-xl font-bold flex items-center lg:ml-2.5">
                   <img class="hidden sm:flex w-7" src="https://img.icons8.com/ios-filled/50/000000/fingerprint.png" alt="Icon">
-                  <span class="pl-2">BERRY VAULT</span>
+                  <span class="lg:pl-2">BERRY VAULT</span>
                 </div>
                 
                 </a>
