--- a/templates/edit_password.html
+++ b/templates/edit_password.html
@@ -62,7 +62,7 @@
               <label for="add_specials" class="" >#$~</label>
             </div>
           </div>
-          <input type="new_url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value="{{pass_info[3]}}"/>
+          <input type="url" name="new_pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value="{{pass_info[3]}}"/>
           <select name="new_pass_category"class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium ">
             <option value="" selected>Choose a category</option>
             {% for category in category_list %}
