add to favorite

--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -63,12 +63,10 @@
             </div>
           </div>
           <input type="url" name="pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value=""/>
-          <select name="pass_category"class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium ">
-            <option value="" selected>Choose a category</option>
-            {% for category in category_list %}
-            <option value={{ category[0] }} >{{ category[0] }}</option>
-            {% endfor %}
-          </select>
+          <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
+            <input name="pass_favorite" type="checkbox" value="1" class="ml-2 text-sm font-medium text-gray-900 mr-1">
+            <label for="pass_favorite" class="" >Add to Favorites</label>
+          </div>
           <input type="submit" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]">
       </form>
       {% with messages = get_flashed_messages()  %}
