--- a/templates/edit_password.html
+++ b/templates/edit_password.html
@@ -63,12 +63,14 @@
             </div>
           </div>
           <input type="url" name="new_pass_url" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium " placeholder="Url" value="{{pass_info[3]}}"/>
-          <select name="new_pass_category"class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium ">
-            <option value="" selected>Choose a category</option>
-            {% for category in category_list %}
-            <option value={{ category[0] }} >{{ category[0] }}</option>
-            {% endfor %}
-          </select>
+          <div class="w-full h-[40px] mb-2 border border-slate-600 rounded-lg font-medium flex flex-row justify-left items-center">
+            {% if pass_info[4] == "1" %}
+            <input checked name="new_pass_favorite" type="checkbox" value="1" class="ml-2 text-sm font-medium text-gray-900 mr-1">
+            {% else %}
+            <input name="new_pass_favorite" type="checkbox" value="1" class="ml-2 text-sm font-medium text-gray-900 mr-1">
+            {% endif %}
+            <label for="new_pass_favorite" class="" >Add to Favorites</label>
+          </div>
           <input type="submit" class="bg-slate-500 hover:bg-slate-700 text-white text-base rounded-lg py-2.5 px-5 mb-2 transition-colors w-full text-[19px]">
       </form>
       {% with messages = get_flashed_messages()  %}
@@ -89,3 +91,4 @@
 
 </body>
 </html>
+
