--- a/templates/index.html
+++ b/templates/index.html
@@ -145,8 +145,8 @@
                      <div id="password_infos">
 
                         <div class="password_not_selected flex justify-center">
-                           <div class="justify-center bg-[#d08770] rounded-lg p-4 drop-shadow-md transition ease-in-out delay-150 hover:scale-110 duration-300">
-                              <h1 class="uppercase  font-semibold ">Please Select a password to edit it  <i class="pl-2 fa-solid fa-pencil"></i></h1>
+                           <div class="justify-center bg-[#8FBCBB] rounded-lg p-4 drop-shadow-md transition ease-in-out delay-150 hover:scale-110 duration-300">
+                              <h1 class="uppercase  font-semibold ">Please Select a password to edit it  <i class="pl-2 fa-solid fa-circle-info"></i></h1>
                            </div>
                         </div>
 
@@ -164,7 +164,7 @@
     <script src = "{{ url_for('static', filename = 'js/add_password.js') }}"></script>
     <script src = "{{ url_for('static', filename = 'js/search.js') }}"></script>
     <script src = "{{ url_for('static', filename = 'js/fill_infos.js') }}"></script>
-    
+    <script src = "{{ url_for('static', filename = 'js/del.js') }}"></script>
    
     
     <script async defer src="https://buttons.github.io/buttons.js"></script>
