aes side server encryption

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Mon appli</title>
+    <title>ERROR</title>
+    <link rel="shortcut icon" href="https://i.ibb.co/KskyLnt/icons8-fingerprint-100.png" type="image/svg+xml"></link>
 </head>
 <body>
     <!-- component -->
-    <main class="h-screen w-full flex flex-col justify-center items-center bg-[#1A2238]">
+    <main class="h-screen w-full flex flex-col justify-center items-center bg-[#3B4252]">
         <h1 class="text-9xl font-extrabold text-white tracking-widest">404</h1>
-        <div class="bg-[#FF6A3D] px-2 text-sm rounded rotate-12 absolute">
+        <div class="bg-[#88C0D0] px-2 text-sm rounded rotate-12 absolute">
             Page Not Found
         </div>
         <button class="mt-5">
         <a
-            class="relative inline-block text-sm font-medium text-[#FF6A3D] group active:text-orange-500 focus:outline-none focus:ring"
+            class="relative inline-block text-sm font-medium text-[#FF6A3D] group active:text-orange focus:outline-none focus:ring"
         >
             <span
             class="absolute inset-0 transition-transform translate-x-0.5 translate-y-0.5 bg-[#FF6A3D] group-hover:translate-y-0 group-hover:translate-x-0"
             ></span>
 
-            <span class="relative block px-8 py-3 bg-[#1A2238] border border-current">
-            <router-link to="/">Go Home</router-link>
-            </span>
+            <a href="/" class="text-white focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center drop-shadow-md transition ease-in-out delay-150 bg-[#8FBCBB]  hover:bg-[#D08770] duration-300">
+                 Go Home
+             </a>
         </a>
         </button>
     </main>
