--- a/templates/add_password.html
+++ b/templates/add_password.html
@@ -11,7 +11,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
-    <title>Add Password</title>
+    <title>BERRY VAULT | Add password</title>
+    <link rel="shortcut icon" href="https://i.ibb.co/KskyLnt/icons8-fingerprint-100.png" type="image/svg+xml"></link>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
