--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
-    <title>Gestion</title>
-
+    <title>BERRY VAULT | Login</title>
+    <link rel="shortcut icon" href="https://i.ibb.co/KskyLnt/icons8-fingerprint-100.png" type="image/svg+xml"></link>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script src="https://kit.fontawesome.com/580982fca5.js" crossorigin="anonymous"></script>
