--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/iut.png" type="image/x-icon">
     
-    <title>Gestion</title>
+    <title>BERRY VAULT | Register</title>
+    <link rel="shortcut icon" href="https://i.ibb.co/KskyLnt/icons8-fingerprint-100.png" type="image/svg+xml"></link>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
